fix autosort menu overflow

--- a/app/assets/stylesheets/peptidome.css.less
+++ b/app/assets/stylesheets/peptidome.css.less
@@ -107,6 +107,10 @@
 }
 
 // analyzed genomes
+.analyzed-proteomes .card,
+.analyzed-proteomes .card-supporting-text {
+    overflow: visible;
+}
 .genomes-table .handle {
     width: 30px;
     vertical-align: middle;
